<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nro4580.enseniame.CrearProfesorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completar_perfil"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/textView3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hombre"
            android:id="@+id/imageView"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mujer"
            android:layout_marginRight="51dp"
            android:layout_marginEnd="51dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout"
        android:paddingBottom="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_nombre"
            android:ems="10"
            android:id="@+id/editTextNombre" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/hint_email"
            android:id="@+id/editTextEmail" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/hint_celular"
            android:id="@+id/editTextCelular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instrumento"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <Spinner
            android:id="@+id/spinnerSeleccionInstrumentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/instrumentos"
            android:prompt="@string/elegir_instrumento"
            android:paddingBottom="10dp"/>
        <Button
            android:layout_gravity="center"
            android:text="@string/registrar_profesor"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:onClick="onClickRegistrarse"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />

    </LinearLayout>


</RelativeLayout>
