<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nro4580.enseniame.RegistrarProfesorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_button_registrarse_profesor"
            android:textSize="15sp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <Button
            android:layout_gravity="center"
            android:text="@string/button_registrar"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:onClick="onClickCrearProfesorActivity"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_button_modificar_datos_profesor"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>
        <Button
            android:layout_gravity="center"
            android:text="@string/button_modificar"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:onClick="onClickModificarProfesorActivity"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_button_eliminar_profesor"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>
        <Button
            android:layout_gravity="center"
            android:text="@string/button_eliminar"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:onClick="onClickEliminarProfesorActivity"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
    </LinearLayout>

</LinearLayout>
